--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://akshit2707.github.io/whack-a-mole",
   "name": "whack-a-mole",
   "version": "0.1.0",
   "private": true,
@@ -7,10 +8,13 @@
   },
   "dependencies": {
     "animejs": "^2.0.2",
+    "gh-pages": "^3.2.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
