--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://akshit2707.github.io/whack-a-mole",
+  "homepage": "https://akshit2707.github.io/whack-a-mole-js",
   "name": "whack-a-mole",
   "version": "0.1.0",
   "private": true,
